tests/bits-param/invalid-param-value-2.rs
use modular_bitfield::prelude::*;

#[bitfield(bits = -1)]
pub struct SignInteger {
    sign: bool,
    value: B31,
}

fn main() {}
